# V-1.0

./: CMakeLists.txt  README.md  biblioteka.h  duomenys.h  gg.cpp  rasymas.cpp
